End of Kendo Scripts

--- a/RPS.Web.MVC/Views/Dashboard/Index.cshtml
+++ b/RPS.Web.MVC/Views/Dashboard/Index.cshtml
@@ -20,15 +20,15 @@
 
         <div class="btn-toolbar mb-2 mb-md-0">
             <div class="btn-group mr-2">
-                <button type="button" class="pt-class-range-filter" data-range="3" onclick="location.href = '@(Url.Action("Index", "Dashboard", new { months = 3, userId = ViewBag.userId }))'">
+                <kendo-button name="btnFilterMonths3" deferred="true" type="button" class="pt-class-range-filter" data-range="3" onclick="location.href = '@(Url.Action("Index", "Dashboard", new { months = 3, userId = ViewBag.userId }))'">
                     3 Months
-                </button>
-                <button type="button" class="pt-class-range-filter" data-range="6" onclick="location.href = '@(Url.Action("Index", "Dashboard", new { months = 6, userId = ViewBag.userId  }))'">
+                </kendo-button>
+                <kendo-button name="btnFilterMonths6" type="button" class="pt-class-range-filter" data-range="6" onclick="location.href = '@(Url.Action("Index", "Dashboard", new { months = 6, userId = ViewBag.userId  }))'">
                     6 Months
-                </button>
-                <button type="button" class="pt-class-range-filter" data-range="12" onclick="location.href = '@(Url.Action("Index", "Dashboard", new { months = 12, userId = ViewBag.userId  }))'">
+                </kendo-button>
+                <kendo-button name="btnFilterMonths12" type="button" class="pt-class-range-filter" data-range="12" onclick="location.href = '@(Url.Action("Index", "Dashboard", new { months = 12, userId = ViewBag.userId  }))'">
                     1 Year
-                </button>
+                </kendo-button>
             </div>
         </div>
     </div>
