--- a/RPS.Web.MVC/Views/Shared/_Layout.cshtml
+++ b/RPS.Web.MVC/Views/Shared/_Layout.cshtml
@@ -8,6 +8,13 @@
         @Scripts.Render("~/bundles/modernizr")*@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="~/lib/kendo/js/kendo.all.min.js"></script>
+    <script src="~/lib/kendo/js/kendo.aspnetmvc.min.js"></script>
+
+    @Html.Kendo().DeferredScripts()
+
 
     @RenderSection("styles", required: false)
 </head>
@@ -190,10 +197,10 @@
     </div>
 
     @*@Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")*@
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        @Scripts.Render("~/bundles/bootstrap")*@
+    
     <script src="~/js/site.js" asp-append-version="true"></script>
+    @Html.Kendo().DeferredScripts()
     @RenderSection("scripts", required: false)
 </body>
 </html>
