--- a/RPS.Web.Razor/Pages/_ViewImports.cshtml
+++ b/RPS.Web.Razor/Pages/_ViewImports.cshtml
@@ -2,3 +2,5 @@
 @namespace RPS.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, RPS.Web
+@addTagHelper *, Kendo.Mvc
+@using Kendo.Mvc.UI
